--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4"
+    "@types/react-dom": "18.2.4",
+    "@types/react-slick": "^0.23.10"
   }
 }
